week 8
not using preview witch statements in first question