@@ -2,12 +2,6 @@ plugins {
     id 'java'
 }
 
-apply plugin: 'java'
-
-compileJava {
-    options.compilerArgs << '--enable-preview'
-}
-
 group 'org.example'
 version '1.0-SNAPSHOT'
 
